--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/brands.min.css"
         integrity="sha512-G/T7HQJXSeNV7mKMXeJKlYNJ0jrs8RsWzYG7rVACye+qrcUhEAYKYzaa+VFy6eFzM2+/JT1Q+eqBbZFSHmJQew=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/brands.min.css"
+        integrity="sha512-G/T7HQJXSeNV7mKMXeJKlYNJ0jrs8RsWzYG7rVACye+qrcUhEAYKYzaa+VFy6eFzM2+/JT1Q+eqBbZFSHmJQew=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/fontawesome.min.css"
+        integrity="sha512-giQeaPns4lQTBMRpOOHsYnGw1tGVzbAIHUyHRgn7+6FmiEgGGjaG0T2LZJmAPMzRCl+Cug0ItQ2xDZpTmEc+CQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
@@ -82,10 +96,238 @@
             <h1>Our favorite destinations</h1>
         </div>
 
-        <div class="destination_container">
+        <div class="slider_container swiper">
+
+            <div class="slide-content">
+                <div class="card-wrapper swiper-wrapper">
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <img src="./img/card2.jpg" alt="">
+                        </div>
+
+                        <div class="card-content">
+
+                            <span> <i class="fa-solid fa-location-dot"></i> Logpom de la cite</span>
+                            <h2>cite de paradi</h2>
+                            <div class="note">
+                                <p class="secondNote"><span><i class="fa-solid fa-star"></i>4.5 note</span></p>
+                                <p><span>$32 days</span></p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+
+                            <img src="./img/card1.jpg" alt="">
+
+
+                        </div>
+
+                        <div class="card-content">
+
+
+                            <span> <i class="fa-solid fa-location-dot"></i> Logpom de la cite</span>
+                            <h2>cite de paradi</h2>
+                            <div class="note">
+                                <p class="secondNote"><span><i class="fa-solid fa-star"></i>4.5 note</span></p>
+                                <p><span>$32 days</span></p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <img src="./img/card3.jpg" alt="">
+                        </div>
+
+                        <div class="card-content">
+
+
+                            <span> <i class="fa-solid fa-location-dot"></i> Logpom de la cite</span>
+                            <h2>cite de paradi</h2>
+                            <div class="note">
+                                <p class="secondNote"><span><i class="fa-solid fa-star"></i>4.5 note</span></p>
+                                <p><span>$32 days</span></p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <img src="./img/card4.jpg" alt="">
+                        </div>
+
+                        <div class="card-content">
+
+
+                            <span> <i class="fa-solid fa-location-dot"></i> Logpom de la cite</span>
+                            <h2>cite de paradi</h2>
+                            <div class="note">
+                                <p class="secondNote"><span><i class="fa-solid fa-star"></i>4.5 note</span></p>
+                                <p><span>$32 days</span></p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <img src="./img/card2.jpg" alt="">
+                        </div>
+
+                        <div class="card-content">
+
+
+                            <span> <i class="fa-solid fa-location-dot"></i> Logpom de la cite</span>
+                            <h2>cite de paradi</h2>
+                            <div class="note">
+                                <p class="secondNote"><span><i class="fa-solid fa-star"></i>4.5 note</span></p>
+                                <p><span>$32 days</span></p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <img src="./img/card4.jpg" alt="">
+                        </div>
+
+                        <div class="card-content">
 
 
 
+                            <span> <i class="fa-solid fa-location-dot"></i> Logpom de la cite</span>
+                            <h2>cite de paradi</h2>
+                            <div class="note">
+                                <p class="secondNote"><span><i class="fa-solid fa-star"></i>4.5 note</span></p>
+                                <p><span>$32 days</span></p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+
+
+                            <img src="./img/card1.jpg" alt="">
+
+
+                        </div>
+
+                        <div class="card-content">
+
+                            <span> <i class="fa-solid fa-location-dot"></i> Logpom de la cite</span>
+                            <h2>cite de paradi</h2>
+                            <div class="note">
+                                <p class="secondNote"><span><i class="fa-solid fa-star"></i>4.5 note</span></p>
+                                <p><span>$32 days</span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div> -->
+
+        </div>
+
+
+    </div>
+
+    <div class="service">
+        <div class="left">
+
+            <div class="image">
+                <img src="./img/bgService.jpg" alt="">
+            </div>
+
+
+        </div>
+        <div class="right">
+
+            <div class="center">
+
+                <div class="header">
+                    <span>Best services</span>
+                    <h1>Feel the best experience with our rental deals</h1>
+                </div>
+                <div class="content">
+                    <div class="card">
+                        <div class="image">
+                            <i class="fa-solid fa-window-restore"></i>
+                        </div>
+                        <div class="text">
+                            <h1>Deals for every budget</h1>
+                            <p>incredible prices on hate is . flights cars. <br> and package worlwide</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="image">
+                            <i class="fa-solid fa-layer-group"></i>
+                        </div>
+                        <div class="text">
+                            <h1>Best price guaranteed</h1>
+                            <p>Find a lower price ? we'll refund you 100% of the difference</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="image">
+                            <i class="fa-solid fa-folder-minus"></i>
+                        </div>
+                        <div class="text">
+                            <h1>Support 24/7</h1>
+                            <p>Find a lower price we'll refund you 100% of the difference</p>
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+            </div>
+        </div>
+    </div>
+
+    <div class="destination_inspiration">
+        <h1>Be Inspired For The Next Vacation</h1>
+        <div class="contain_inspiration">
+            <div class=" card card1">
+                <div class="img"><img src="./img/card1.jpg" alt=""></div>
+                <div class="card_text">
+
+                    <p>I am here</p>
+                </div>
+            </div>
+            <div class=" card card2">
+                <div class="img"><img src="./img/card2.jpg" alt=""></div>
+                <div class="card_text">
+
+                    <p>I am here</p>
+                </div>
+            </div>
+            <div class=" card card3">
+                <div class="img"><img src="./img/card3.jpg" alt=""></div>
+                <div class="card_text">
+
+                    <p>I am here</p>
+                </div>
+            </div>
+            <div class=" card card4">
+                <div class="img"><img src="./img/card4.jpg" alt=""></div>
+                <div class="card_text">
+
+                    <p>I am here</p>
+                </div>
+            </div>
+            <div class=" card card5">
+                <div class="img"><img src="img/card3.jpg" alt=""></div>
+                <div class="card_text">
+
+                    <p>I am here</p>
+                </div>
+            </div>
         </div>
 
 
@@ -93,8 +335,22 @@
 
 
 
-    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <div class="footer">
+        <div class="logo">
+
+            <h1>Booking Travel</h1>
+        </div>
+        <ul>
+            <li><a href="#"> Bookin</a></li>
+            <li><a href="#"> Sevice</a></li>
+            <li><a href="#"> About</a></li>
+            <li><a href="#"> Destination</a></li>
+        </ul>
+
+        <div class="social"><span><i class="fa-brands fa-facebook"></i></span><i class="fa-brands fa-twitter"></i><span><i class="fa-brands fa-square-instagram"></i></span><i class="fa-brands fa-youtube"></i></div>
+    </div>
+
+    <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
 
     <script src="./js/app.js"></script>
     <script src="./js/swiper.js"></script>
