--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 </head>
 
 <body>
+    <div class="loader">
+        <span>L</span><span>O</span><span>A</span><span>D</span><span>I</span><span>N</span><span>G</span>
+    </div>
     <header>
         <nav>
             <div class="logo">Booking <span>Travel</span></div>
@@ -51,6 +54,9 @@
         </nav>
 
     </header>
+
+
+
     <div class="hero">
 
         <div class="left">
@@ -347,13 +353,16 @@
             <li><a href="#"> Destination</a></li>
         </ul>
 
-        <div class="social"><span><i class="fa-brands fa-facebook"></i></span><i class="fa-brands fa-twitter"></i><span><i class="fa-brands fa-square-instagram"></i></span><i class="fa-brands fa-youtube"></i></div>
+        <div class="social"><span><i class="fa-brands fa-facebook"></i></span><i
+                class="fa-brands fa-twitter"></i><span><i class="fa-brands fa-square-instagram"></i></span><i
+                class="fa-brands fa-youtube"></i></div>
     </div>
 
     <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
 
     <script src="./js/app.js"></script>
     <script src="./js/swiper.js"></script>
+    <script src="./js/loader.js"></script>
 </body>
 
 </html>
