--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         integrity="sha512-giQeaPns4lQTBMRpOOHsYnGw1tGVzbAIHUyHRgn7+6FmiEgGGjaG0T2LZJmAPMzRCl+Cug0ItQ2xDZpTmEc+CQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 
 
@@ -92,8 +92,91 @@
 
             </div>
         </div>
+
+
     </div>
+
     <div class="vide"></div>
+
+
+    <div class="contain_item">
+        <div class="item">
+            <div class="header">
+                <div class="left"><img src="./img/card2.jpg" alt="">
+                    <h1>Love travel</h1>
+                </div>
+                <div class="right"><span>VIP</span></div>
+            </div>
+            <div class="trajet">
+                <span class="heure_depart">4h</span><span class="tiret"></span><span class=" heure_arrive ">4h</span>
+                <span class="tiret"></span> <span class="duree">8h</span>
+                <button class="prix_trajet"> 750 Fcfa</button>
+            </div>
+        </div>
+        <div class="item">
+            <div class="header">
+                <div class="left"><img src="#" alt="">
+                    <h1>Love travel</h1>
+                </div>
+                <div class="right"><span>VIP</span></div>
+            </div>
+            <div class="trajet">
+                <span class="heure_depart">4h</span><span class="tiret"></span><span class=" heure_arrive ">4h</span>
+                <span class="tiret"></span> <span class="duree">8h</span>
+                <button class="prix_trajet"> 750 Fcfa</button>
+            </div>
+
+
+            <span class="more">Voir +</span>
+        </div>
+        <div class="item">
+            <div class="header">
+                <div class="left"><img src="#" alt="">
+                    <h1>Love travel</h1>
+                </div>
+                <div class="right"><span>VIP</span></div>
+            </div>
+            <div class="trajet">
+                <span class="heure_depart">4h</span><span class="tiret"></span><span class=" heure_arrive ">4h</span>
+                <span class="tiret"></span> <span class="duree">8h</span>
+                <button class="prix_trajet"> 750 Fcfa</button>
+            </div>
+            <span class="more">Voir +</span>
+
+        </div>
+        <div class="item">
+            <div class="header">
+                <div class="left"><img src="#" alt="">
+                    <h1>Love travel</h1>
+                </div>
+                <div class="right"><span>VIP</span></div>
+            </div>
+            <div class="trajet">
+                <span class="heure_depart">4h</span><span class="tiret"></span><span class=" heure_arrive ">4h</span>
+                <span class="tiret"></span> <span class="duree">8h</span>
+                <button class="prix_trajet"> 750 Fcfa</button>
+            </div>
+            <span class="more">Voir +</span>
+
+        </div>
+        <div class="item">
+            <div class="header">
+                <div class="left"><img src="#" alt="">
+                    <h1>Love travel</h1>
+                </div>
+                <div class="right"><span>VIP</span></div>
+            </div>
+            <div class="trajet">
+                <span class="heure_depart">4h</span><span class="tiret"></span><span class=" heure_arrive ">4h</span>
+                <span class="tiret"></span> <span class="duree">8h</span>
+                <button class="prix_trajet"> 750 Fcfa</button>
+            </div>
+            <span class="more">Voir +</span>
+
+        </div>
+
+    </div>
+
 
     <div class="popular_destination">
 
